# xadrez

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  chess-wasm-46418b17ccabdce8.js  chess-wasm-46418b17ccabdce8_bg.wasm  chess-wasm-77f04658bdd3f2a0_bg.wasm  chess-wasm-bbafad8536de073c_bg.wasm  chess-wasm-cae560c4884abe37.js  chess-wasm-cae560c4884abe37_bg.wasm  index.html  style-5151d36d86f00d99.css
benches/: bench_energy.rs  bench_space.rs  bench_time.rs  helpers.rs
chess-wasm/: Cargo.toml  index.html  style.css
chess-wasm/src/: app.rs  main.rs  render.rs  state.rs
chess-wasm/src/components/: chess_board.rs  difficulty_selector.rs  fen_display.rs  mod.rs  mode_selector.rs  move_input.rs  move_list.rs  new_game.rs  piece_icon.rs  promotion_dialog.rs  square_tile.rs  status_bar.rs  undo_button.rs
docs/: README.md  api.md  arquitetura.md  desenvolvimento.md  diagrama.md  regras-xadrez.md
scripts/: Cargo.toml
scripts/src/: art.rs  main.rs  reader.rs  triangle.rs
src/: ai.rs  board.rs  fen.rs  game.rs  lib.rs  main.rs  moves.rs  mv.rs  notation.rs  piece.rs  square.rs
