[package]
name = "chess"
version = "0.1.0"
edition = "2021"
description = "Jogo de xadrez completo no terminal em Rust"

[workspace]
members = ["chess-wasm", "scripts"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_space"
harness = false

[[bench]]
name = "bench_energy"
harness = false

[[bench]]
name = "bench_time"
harness = false

[dependencies]
